[package]
name = "esp-quic"
version = "0.1.0"
authors = ["ealinye <ealinye@outlook.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-quic"
harness = false   # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
quic = { git = "https://github.com/ealinye/gm-quic.git" }
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt"] }
ring = { version = "0.17.8", features = ["less-safe-getrandom-espidf"] }
# rustls-rustcrypto = "0.0.2-alpha"  --junsupport QUIC
rustls-native-certs = { version = "0.7" }

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["std", "ring"]

# [dependencies.reqwest]
# git = "https://github.com/ealinye/reqwest.git"
# default-features = false
# features = ["http3"]
# branch = "ealinye"

[patch.crates-io]
ring = { git = "https://github.com/briansmith/ring.git" }
rustls = { git = "https://github.com/rustls/rustls.git" }

[build-dependencies]
embuild = "0.32.0"
